--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha test/**/*.spec.js",
     "node": "node --es-module-specifier-resolution=node",
-    "start": "npm run node src/index.js"
+    "start": "npm run node src/index.js",
+    "migrate:reset": "sequelize-cli db:migrate:undo:all && sequelize-cli db:migrate"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,13 @@
     "url": "https://github.com/roptch/weblib-js-assessment/issues"
   },
   "homepage": "https://github.com/roptch/weblib-js-assessment#readme",
-  "type": "module",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
@@ -31,6 +36,7 @@
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.3",
-    "mocha": "^8.4.0"
+    "mocha": "^8.4.0",
+    "sequelize-cli": "^6.2.0"
   }
 }
