--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/**/*.spec.js",
-    "node": "node --es-module-specifier-resolution=node",
-    "start": "npm run node src/index.js",
-    "migrate:reset": "sequelize-cli db:migrate:undo:all && sequelize-cli db:migrate"
+    "start": "node src/index.js",
+    "migrate:reset": "sequelize-cli db:migrate:undo:all && sequelize-cli db:migrate",
+    "test": "cross-env NODE_ENV=test mocha test/**/*.js",
+    "pretest": "cross-env NODE_ENV=test npm run migrate:reset"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.3",
