--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - db
     depends_on:
       - db
+    volumes:
+      - .:/usr/src/app
     command: npx sequelize-cli db:migrate
 
   test:
@@ -30,6 +32,8 @@ services:
     depends_on:
       - migration
       - db
+    volumes:
+      - .:/usr/src/app
     command: npm test
 
   db:
