--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('config', 'sequelize.json'),
+  'config': path.resolve('config', 'sequelize.js'),
   'models-path': path.resolve('src', 'models'),
   'seeders-path': path.resolve('seeders'),
   'migrations-path': path.resolve('migrations')
